force-app/main/default/objects/Opportunity/fields/Account_Match_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Details__c</fullName>
    <description>Pulls from Product Account</description>
    <label>Account Match Details</label>
    <type>TextArea</type>
</CustomField>