force-app/main/default/objects/Opportunity/fields/BuyerSeller_Match__c.field-meta.xml
<CustomField>
    <fullName>BuyerSeller_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we formally agreed a match</description>
    <inlineHelpText>Have we formally agreed a match</inlineHelpText>
    <label>BuyerSeller Match</label>
    <type>Checkbox</type>
</CustomField>