force-app/main/default/objects/Opportunity/fields/Date_Dormant_was_checked__c.field-meta.xml
<CustomField>
    <fullName>Date_Dormant_was_checked__c</fullName>
    <description>This will log the date that the &apos;dormant&apos; checkbox was checked</description>
    <label>Date Dormant was checked</label>
    <type>Date</type>
</CustomField>