force-app/main/default/objects/Opportunity/fields/Decision_Making_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Cycle__c</fullName>
    <description>To be displayed on all opps</description>
    <formula>IMAGE(&quot;https://axora--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0684K000000TAUt&amp;operationContext=CHATTER&amp;contentId=05T4K000005XF2Q&quot;,
						&apos;decision making cycle&apos;,300,300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Decision Making Cycle</inlineHelpText>
    <label>Decision Making Cycle</label>
    <type>Text</type>
</CustomField>