force-app/main/default/objects/Opportunity/fields/DMC_Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>DMC_Primary_Location__c</fullName>
    <inlineHelpText>Select the primary location on the DMC - if multiple please select the lowest possible.</inlineHelpText>
    <label>DMC Primary Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Motivation to Move</fullName>
                <default>true</default>
                <label>1. Motivation to Move</label>
            </value>
            <value>
                <fullName>2. Intention to Move</fullName>
            </value>
            <value>
                <fullName>3. Preference</fullName>
            </value>
            <value>
                <fullName>4. Decision Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>