force-app/main/default/objects/Opportunity/fields/DMC_Primary_Location_Blank__c.field-meta.xml
<CustomField>
    <fullName>DMC_Primary_Location_Blank__c</fullName>
    <formula>IF( ISPICKVAL(ForecastCategoryName, &apos;Best Case&apos;) &amp;&amp; ISBLANK(TEXT(DMC_Primary_Location__c)) , 
(IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;&quot;)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMC Primary Location Blank</label>
    <type>Text</type>
</CustomField>