force-app/main/default/objects/Opportunity/fields/Dormant__c.field-meta.xml
<CustomField>
    <fullName>Dormant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate that this object is dormant</description>
    <label>Dormant</label>
    <type>Checkbox</type>
</CustomField>