force-app/main/default/objects/Opportunity/fields/Export_Control_Check__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done an export control check on the opportunity?</description>
    <inlineHelpText>Have we done an export control check on the opportunity?</inlineHelpText>
    <label>Export Control Check</label>
    <type>Checkbox</type>
</CustomField>