force-app/main/default/objects/Opportunity/fields/Export_Control_Check_By__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Check_By__c</fullName>
    <description>Who did the export control check ?</description>
    <inlineHelpText>Who did the export control check ?</inlineHelpText>
    <label>Export Control Check By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anastasija Verbicka</fullName>
            </value>
            <value>
                <fullName>Dave Riches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>