force-app/main/default/objects/Opportunity/fields/Export_Control_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Check_Date__c</fullName>
    <description>Date of the export control check</description>
    <inlineHelpText>Date of the export control check</inlineHelpText>
    <label>Export Control Check Date</label>
    <type>Date</type>
</CustomField>