force-app/main/default/objects/Opportunity/fields/Export_License_Comments__c.field-meta.xml
<CustomField>
    <fullName>Export_License_Comments__c</fullName>
    <label>Export License Comments</label>
    <type>TextArea</type>
</CustomField>