force-app/main/default/objects/Opportunity/fields/Export_License_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Export_License_Outcome__c</fullName>
    <inlineHelpText>Record the outcome of the export license request here</inlineHelpText>
    <label>Export License Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass - no export license required</fullName>
            </value>
            <value>
                <fullName>Pass - export license received</fullName>
            </value>
            <value>
                <fullName>Fail - breaches sanctions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>