force-app/main/default/objects/Opportunity/fields/Export_License_Received__c.field-meta.xml
<CustomField>
    <fullName>Export_License_Received__c</fullName>
    <inlineHelpText>Date at which we received the export license. Blank if not received (or requested)</inlineHelpText>
    <label>Export License Received</label>
    <type>Date</type>
</CustomField>