force-app/main/default/objects/Opportunity/fields/Export_License_Requested__c.field-meta.xml
<CustomField>
    <fullName>Export_License_Requested__c</fullName>
    <inlineHelpText>When did we request the export license ? Blank if not requested.</inlineHelpText>
    <label>Export License Requested</label>
    <type>Date</type>
</CustomField>