force-app/main/default/objects/Opportunity/fields/Four_Months_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Four_Months_Since_Last_Update__c</fullName>
    <description>For exception reporting</description>
    <formula>IF(Stage_Last_Change_Date__c  &lt;= Today()-90, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Months Since Last Stage Change</label>
    <type>Checkbox</type>
</CustomField>