force-app/main/default/objects/Opportunity/fields/Match_Details__c.field-meta.xml
<CustomField>
    <fullName>Match_Details__c</fullName>
    <formula>Account.Match_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls across the contractual details of matching if non standard.</inlineHelpText>
    <label>Match Details</label>
    <type>Text</type>
</CustomField>