force-app/main/default/objects/Opportunity/fields/MatchDate__c.field-meta.xml
<CustomField>
    <fullName>MatchDate__c</fullName>
    <label>MatchDate (read only)</label>
    <type>Date</type>
</CustomField>