force-app/main/default/objects/Opportunity/fields/No_Products__c.field-meta.xml
<CustomField>
    <fullName>No_Products__c</fullName>
    <formula>IF(Number_of_Products__c = 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Products</label>
    <type>Checkbox</type>
</CustomField>