force-app/main/default/objects/Opportunity/fields/No_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>No_Sales_Status__c</fullName>
    <formula>IF(ISBLANK(Sales_Status_Last_Updated__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Sales Status</label>
    <type>Checkbox</type>
</CustomField>