force-app/main/default/objects/Opportunity/fields/Number_of_Days_in_dormant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_in_dormant__c</fullName>
    <formula>TODAY() - Date_Dormant_was_checked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the number of days this opportunity was in a dormant state.</inlineHelpText>
    <label>Number of Days in dormant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>