force-app/main/default/objects/Opportunity/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <description>Which country is the opportunity related to</description>
    <inlineHelpText>Which country is the opportunity related to?</inlineHelpText>
    <label>Opportunity Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Axora_Countries</valueSetName>
    </valueSet>
</CustomField>