force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <description>Updates based on Primary source</description>
    <formula>IF(ISBLANK( Campaign.Name ), &quot;Outbound&quot;, &quot;Inbound&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Source</label>
    <type>Text</type>
</CustomField>