force-app/main/default/objects/Opportunity/fields/Past_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Date__c</fullName>
    <formula>IF(CloseDate &lt;= Today() &amp;&amp; IsClosed=FALSE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Date</label>
    <type>Checkbox</type>
</CustomField>