force-app/main/default/objects/Opportunity/fields/Qualified_and_No_Match__c.field-meta.xml
<CustomField>
    <fullName>Qualified_and_No_Match__c</fullName>
    <formula>IF(BuyerSeller_Match__c = FALSE &amp;&amp; Probability &gt;=0.2, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified and No Match</label>
    <type>Checkbox</type>
</CustomField>