force-app/main/default/objects/Opportunity/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Total Axora Revenue based on products&apos; transaction fee</description>
    <inlineHelpText>Total Axora Revenue based on products&apos; transaction fee</inlineHelpText>
    <label>Revenue</label>
    <summarizedField>OpportunityLineItem.Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>