force-app/main/default/objects/Opportunity/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <inlineHelpText>Used to capture next steps etc</inlineHelpText>
    <label>Sales Status</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>