force-app/main/default/objects/Opportunity/fields/Sales_Status_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status_Last_Updated__c</fullName>
    <description>Updated via pb</description>
    <label>Sales Status Last Updated</label>
    <type>Date</type>
</CustomField>