force-app/main/default/objects/Opportunity/fields/Six_Weeks_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Six_Weeks_Since_Last_Update__c</fullName>
    <formula>IF(Sales_Status_Last_Updated__c &lt;= TODAY() - 42 , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Six Weeks Since Last Update</label>
    <type>Checkbox</type>
</CustomField>