force-app/main/default/objects/Opportunity/fields/Stage_Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Last_Change_Date__c</fullName>
    <description>updated via pb</description>
    <label>Stage Last Change Date</label>
    <type>Date</type>
</CustomField>