force-app/main/default/objects/Opportunity/fields/Utm_Source__c.field-meta.xml
<CustomField>
    <fullName>Utm_Source__c</fullName>
    <label>Utm Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>