force-app/main/default/objects/Opportunity/fields/X1_Motivation_to_Move__c.field-meta.xml
<CustomField>
    <fullName>X1_Motivation_to_Move__c</fullName>
    <description>Summary of insights on customer&apos;s motivation to move</description>
    <inlineHelpText>Summarise the customer&apos;s motivation to move. Note blocker here can be Justification.</inlineHelpText>
    <label>1. Motivation to Move</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>