force-app/main/default/objects/Opportunity/fields/X2_Intention_to_Move__c.field-meta.xml
<CustomField>
    <fullName>X2_Intention_to_Move__c</fullName>
    <description>Summarise the customer&apos;s intention to move.</description>
    <inlineHelpText>Summarise the customer&apos;s intention to move. Key blocker here is Doubt.</inlineHelpText>
    <label>2. Intention to Move</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>