force-app/main/default/objects/Opportunity/fields/X3_Preference__c.field-meta.xml
<CustomField>
    <fullName>X3_Preference__c</fullName>
    <description>Summarise customer&apos;s approach to deciding preference</description>
    <inlineHelpText>Summarise customer&apos;s approach to deciding preference. Note key blocker here is Comparisons</inlineHelpText>
    <label>3. Preference</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>