force-app/main/default/objects/Opportunity/fields/X4_Decision_Point__c.field-meta.xml
<CustomField>
    <fullName>X4_Decision_Point__c</fullName>
    <description>Summarise customer&apos;s approach to committing</description>
    <inlineHelpText>Summarise customer&apos;s approach to committing. Note key blocker here is Risk Perception.</inlineHelpText>
    <label>4. Decision Point</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>