force-app/main/default/objects/Opportunity/fields/X4_Months_since_sales_stage_change__c.field-meta.xml
<CustomField>
    <fullName>X4_Months_since_sales_stage_change__c</fullName>
    <formula>IF( Sales_Status_Last_Updated__c &lt;= Today()-90 , 
(IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;&quot;)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Months since sales stage change</label>
    <type>Text</type>
</CustomField>