force-app/main/default/objects/Opportunity/recordTypes/Buyer.recordType-meta.xml
<RecordType>
    <fullName>Buyer</fullName>
    <active>true</active>
    <businessProcess>Buyer</businessProcess>
    <label>Buyer</label>
</RecordType>