force-app/main/default/objects/Opportunity/recordTypes/Seller.recordType-meta.xml
<RecordType>
    <fullName>Seller</fullName>
    <active>true</active>
    <businessProcess>Seller</businessProcess>
    <label>Seller</label>
</RecordType>