force-app/main/default/objects/Opportunity/validationRules/Contact_Roles_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Roles_Mandatory</fullName>
    <active>true</active>
    <description>Ensures has a Contact Role at or after Proof.</description>
    <errorConditionFormula>(ISPICKVAL(StageName, &apos;Proof&apos;) || ISPICKVAL(StageName, &apos;Negotiate&apos;) || ISPICKVAL(StageName, &apos;Close&apos;))
&amp;&amp;( No_of_Contact_Roles__c =0)</errorConditionFormula>
    <errorMessage>Please add a Contact Role at Proof stage onwards.</errorMessage>
</ValidationRule>