force-app/main/default/objects/Opportunity/validationRules/Has_Products_ProofOnwards.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_Products_ProofOnwards</fullName>
    <active>true</active>
    <description>Ensures has a product at or after Proof.</description>
    <errorConditionFormula>(ISPICKVAL(StageName, &apos;Proof&apos;) || ISPICKVAL(StageName, &apos;Negotiate&apos;))
&amp;&amp;(Number_of_Products__c =0) &amp;&amp; ( RecordType.Name =&apos;Buyer&apos;)</errorConditionFormula>
    <errorMessage>You must have a product attached at Proof stage onwards.</errorMessage>
</ValidationRule>